hydroflow/tests/compile-fail/datalog_badparse.stderr
error: Failed to parse
 --> tests/compile-fail/datalog_badparse.rs:8:28
  |
8 |         out(a) :- in1(a, b), in2
  |                            ^^^^^
